# phosphlux-lite

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  README.md
assets/cutout/: Sony PVM-14_front_C_cutout_no logo.psd
shaders/: lite.wgsl
src/: app.rs  automation.rs  main.rs  presets.rs  renderer.rs  synth.rs  ui.rs
