[package]
name = "phosphlux-lite"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/templeoflum/phosphlux-lite"
description = "Phosphlux Lite - Simple fixed-chain analog video synthesizer"
keywords = ["video-synthesis", "wgpu", "analog", "graphics", "real-time"]
categories = ["graphics", "multimedia", "rendering"]

[dependencies]
# GPU compute
wgpu = "23"
pollster = "0.4"

# Windowing
winit = "0.30"

# GUI
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

# Math
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# Timing
instant = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1  # Some optimization even in dev for real-time work
